[tool.poetry]
name = "advanced_time_series_analysis"
version = "0.1.0"
description = ""
authors = ["s1830134 <s1830134@s.tsukuba.ac.jp>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
